--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -33,6 +33,9 @@ if(BUILD_SWIG_PYTHON OR BUILD_SWIG_OCTAVE OR BUILD_SWIG_MATLAB)
   if (HAVE_JSON)
     SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -DHAVE_JSON)
   endif()
+  if (HAVE_ITK)
+    SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -DHAVE_ITK)
+  endif()
   if (parallelproj_FOUND)
    SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -DHAVE_parallelproj)
   endif()
