--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -289,6 +289,7 @@ install(
 install(
   DIRECTORY
     examples
+  USE_SOURCE_PERMISSIONS
   COMPONENT DOC
   DESTINATION "${STIR_DOC_DIR}"
    FILES_MATCHING
