--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,13 +193,13 @@ endif()
 
 # Parallelproj
 if(NOT DISABLE_Parallelproj_PROJECTOR)
-    find_package(parallelproj 0.8)
+    find_package(parallelproj 1.0)
     if (parallelproj_FOUND)
       set(STIR_WITH_Parallelproj_PROJECTOR ON)
       if (parallelproj_built_with_CUDA)
-        message(STATUS "Found parallelproj (will use its CUDA support)")
+        message(STATUS "Found parallelproj ${parallelproj_VERSION} (will use its CUDA support)")
       else()
-        message(STATUS "Found parallelproj (but using its OpenMP version as it wasn't built with CUDA)")
+        message(STATUS "Found parallelproj ${parallelproj_VERSION} (but using its OpenMP version as it wasn't built with CUDA)")
       endif()
     endif()
 endif()
