--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,12 +10,12 @@ skip_commits:
 version: '{build}'
 
 os:
+  - Visual Studio 2022
+  - Visual Studio 2019
   - Visual Studio 2015
-  - Visual Studio 2013
 
 platform:
   - x64
-  - x86
 
 configuration:
   - Release
@@ -24,10 +24,12 @@ build:
   verbosity: detailed
 
 environment:
-  BOOST_ROOT: C:\Libraries\boost_1_63_0
   CMAKE_INSTALL_PREFIX: C:\projects\stir\install\
 
 build_script:
+  # find boost on Appveyor. Version depends on VM
+  - for /D %%d in (C:\Libraries\boost_*) do set BOOST_ROOT=%%d
+  - echo Using Boost %BOOST_ROOT%
   - mkdir build
   - mkdir install
   - cd build
