--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -2,7 +2,7 @@
 #
 # Author: Kris Thielemans
 # Author Richard Brown
-# Copyright 2016, 2019, 2020, 2022 University College London
+# Copyright 2016, 2019, 2020, 2022, 2023 University College London
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -56,7 +56,7 @@ endif()
 if (@ITK_FOUND@)
   message(STATUS "ITK support in STIR enabled.")
   set(ITK_DIR "@ITK_DIR@")
-  find_package(ITK ${STIR_FIND_TYPE})
+  find_package(ITK ${STIR_FIND_TYPE} CONFIG)
   if(NOT ITK_FOUND)
     SET(STIR_FOUND OFF)
   endif()
@@ -138,7 +138,7 @@ if(@STIR_WITH_NiftyPET_PROJECTOR@)
 endif()
 
 if(@STIR_WITH_Parallelproj_PROJECTOR@)
-  find_package(parallelproj REQUIRED)
+  find_package(parallelproj REQUIRED CONFIG)
   set(STIR_WITH_Parallelproj_PROJECTOR TRUE)
 endif()
 
