[CI] don't run CI on *.htm files [skip ci]

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,6 +7,7 @@ on:
       - '.appveyor.yml'
       - '**/*.md'
       - '**/*.html'
+      - '**/*.htm'
       - '**/*.tex'
 
   pull_request:
@@ -15,6 +16,7 @@ on:
       - '.appveyor.yml'
       - '**/*.md'
       - '**/*.html'
+      - '**/*.htm'
       - '**/*.tex'
 
   workflow_dispatch:
