--- a/src/experimental/motion_test/CMakeLists.txt
+++ b/src/experimental/motion_test/CMakeLists.txt
@@ -17,7 +17,7 @@ Set(${dir_INVOLVED_TEST_EXE_SOURCES}
     test_BSpline_transformations.cxx
 )
 
-# create_stir_involved_test (test_BSpline_transformations.cxx "${STIR_LIBRARIES}" "${STIR_REGISTRIES}")
+# create_stir_involved_test (test_BSpline_transformations.cxx "${STIR_LIBRARIES}" $<TARGET_OBJECTS:stir_registries>)
 
 if (BUILD_TESTING)
 	if (HAVE_ITK)
