--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -269,6 +269,9 @@ if (STIR_ENABLE_EXPERIMENTAL)
   ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/experimental)
 endif()
 
+# create an object library with all the "registries"
+add_library(stir_registries OBJECT ${STIR_REGISTRIES})
+
 # go and look for CMakeLists.txt files in all those directories
 foreach(STIR_DIR ${STIR_DIRS} ${STIR_TEST_DIRS})
 	ADD_SUBDIRECTORY(${STIR_DIR})
