--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -270,6 +270,7 @@ if (STIR_ENABLE_EXPERIMENTAL)
 endif()
 
 # create an object library with all the "registries"
+# Warning: dependencies for object libraries are not transitive!
 add_library(stir_registries OBJECT ${STIR_REGISTRIES})
 # TODO, really should use stir_libs.cmake
 target_include_directories(stir_registries PRIVATE ${STIR_INCLUDE_DIR})
