Recommend parallelproj v1.2.13 in cmake
Co-authored-by: Kris Thielemans <KrisThielemans@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,7 +206,7 @@ if(NOT DISABLE_Parallelproj_PROJECTOR)
         message(STATUS "Found parallelproj ${parallelproj_VERSION} (but using its OpenMP version as it wasn't built with CUDA)")
       endif()
       if (parallelproj_VERSION VERSION_LESS 1.0.1)
-        message(STATUS "If the above parallelproj info looks incorrect, upgrade it to at least 1.0.1")
+        message(STATUS "If the above parallelproj info looks incorrect, upgrade it to at least 1.0.1 (but 1.2.13 or later is recommended)")
       endif()
     endif()
 endif()
