--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,7 +197,7 @@ endif()
 
 # Parallelproj
 if(NOT DISABLE_Parallelproj_PROJECTOR)
-    find_package(parallelproj 1.0 CONFIG)
+    find_package(parallelproj 1.0.1 CONFIG)
     if (parallelproj_FOUND)
       set(STIR_WITH_Parallelproj_PROJECTOR ON)
       if (parallelproj_built_with_CUDA)
@@ -205,8 +205,8 @@ if(NOT DISABLE_Parallelproj_PROJECTOR)
       else()
         message(STATUS "Found parallelproj ${parallelproj_VERSION} (but using its OpenMP version as it wasn't built with CUDA)")
       endif()
-      if (parallelproj_VERSION VERSION_LESS 1.2.13)
-        message(STATUS "If the above parallelproj info looks incorrect, upgrade it to at least 1.2.13")
+      if (parallelproj_VERSION VERSION_LESS 1.0.1)
+        message(STATUS "If the above parallelproj info looks incorrect, upgrade it to at least 1.0.1 (but 1.2.13 or later is recommended)")
       endif()
     endif()
 endif()
