--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -75,7 +75,7 @@ set(${dir_EXE_SOURCES}
         separate_true_from_random_scatter_for_necr.cxx
 )
 
-if (ITK_FOUND)
+if (HAVE_ITK)
   list(APPEND ${dir_EXE_SOURCES} SPECT_dicom_to_interfile.cxx)
 endif()
 
@@ -83,7 +83,7 @@ if (AVW_FOUND)
   list(APPEND ${dir_EXE_SOURCES}  conv_AVW.cxx)
 endif()
 
-if (HDF5_FOUND)
+if (HAVE_HDF5)
  list(APPEND ${dir_EXE_SOURCES}
    construct_randoms_from_GEsingles.cxx
    GE/print_GE_singles_values.cxx
