--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -39,6 +39,7 @@ jobs:
           BUILD_TYPE: "Release"
           parallelproj: "ON"
           ROOT: "ON"
+          ITK: "OFF"
         - os: ubuntu-latest
           compiler: clang
           #compiler_version:
@@ -46,6 +47,8 @@ jobs:
           BUILD_TYPE: "Release"
           parallelproj: "ON"
           ROOT: "OFF"
+          # currently using ITK 5.2 which doesn't like clang 14
+          ITK: "OFF"
         - os: ubuntu-latest
           compiler: gcc
           compiler_version: 10
@@ -53,6 +56,7 @@ jobs:
           BUILD_TYPE: "Debug"
           parallelproj: "OFF"
           ROOT: "OFF"
+          ITK: "ON"
         - os: macOS-latest
           compiler: gcc
           compiler_version: 11
@@ -60,6 +64,7 @@ jobs:
           parallelproj: "OFF"
           BUILD_TYPE: "Debug"
           ROOT: "OFF"
+          ITK: "OFF"
         - os: macOS-latest
           compiler: clang
           compiler_version: 16
@@ -67,6 +72,7 @@ jobs:
           parallelproj: "OFF"
           BUILD_TYPE: "Release"
           ROOT: "OFF"
+          ITK: "OFF"
 
       # let's run all of them, as opposed to aborting when one fails
       fail-fast: false
@@ -132,6 +138,9 @@ jobs:
               fi
               # other dependencies
               sudo apt install libboost-dev libhdf5-serial-dev swig python3-dev nlohmann-json3-dev
+              if test "${{matrix.ITK}}XX" == "ONXX"; then
+                sudo apt install libinsighttoolkit5-dev
+              fi
               PYTHON_EXECUTABLE=$(which python3)
               ;;
             (macOS*)
