--- a/src/listmode_buildblock/CMakeLists.txt
+++ b/src/listmode_buildblock/CMakeLists.txt
@@ -57,4 +57,4 @@ endif()
 
 include(stir_lib_target)
 
-target_link_libraries(listmode_buildblock IO data_buildblock )
+target_link_libraries(listmode_buildblock data_buildblock )
