--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -89,6 +89,17 @@ jobs:
     name: ${{ matrix.os }}-${{ matrix.compiler }}${{ matrix.compiler_version }}-${{ matrix.BUILD_TYPE }}-pp=${{ matrix.parallelproj }}-ROOT=${{ matrix.ROOT }}
 
     steps:
+    - name: disk space
+      shell: bash
+      run: |
+          case ${{matrix.os}} in
+            (ubuntu* | macOS*)
+              df -h
+              ;;
+            (windows*)
+              # no idea how to do this
+              ;;
+           esac
     - uses: actions/checkout@v3
       with:
         submodules: recursive
@@ -150,6 +161,8 @@ jobs:
               if test "${{matrix.ITK}}XX" == "ONXX"; then
                 sudo apt install libinsighttoolkit5-dev
               fi
+              # free up some disk space
+              sudo apt clean
               PYTHON_EXECUTABLE=$(which python3)
               ;;
             (macOS*)
@@ -245,6 +258,15 @@ jobs:
           mkdir build
           cd build
           cmake -S .. ${BUILD_FLAGS} ${EXTRA_BUILD_FLAGS}
+          # report disk space
+          case ${{matrix.os}} in
+            (ubuntu* | macOS*)
+              df -h
+              ;;
+            (windows*)
+              # no idea how to do this
+              ;;
+           esac
 
     - name: build
       shell: bash
