[GHA] remove existing but unneeded packages
removing dotnet, android, and pre-cached tools such as  Ruby

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -95,6 +95,12 @@ jobs:
           case ${{matrix.os}} in
             (ubuntu* | macOS*)
               df -h
+              sudo rm -rf /usr/share/dotnet
+              df -h
+              sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+              df -h
+              sudo rm -rf /usr/local/lib/android
+              df -h
               ;;
             (windows*)
               # no idea how to do this
